--- a/chamber/styles/chamber.css
+++ b/chamber/styles/chamber.css
@@ -141,9 +141,13 @@ h1 {
     font-size: 1rem;
 }
 
+.grid a{
+    font-size: .9rem;
+}
+
 .list section {
     display: grid;
-    grid-template-columns: 20% 15% 11% 49%;
+    grid-template-columns: 20% 15% 11% 40%;
     column-gap: 5px;
     border-top: 1px solid #cdd2ed;
     padding: 0.2rem 0 0 10px;
@@ -156,7 +160,7 @@ h1 {
 }
 
 .list h2, .list p, .list a {
-    font-size: .6rem;
+    font-size: .5rem;
     color: #1a2238;
 }
 
